--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>LabelPrinter</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
-</html>
+</html> 
